--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
     <title>SK핀크스 골프 라운드 신청</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 py-10 px-5">
+<body class="bg-gray-100 py-4 px-4">
 
-    <div class="max-w-lg mx-auto bg-white shadow-2xl rounded-3xl overflow-hidden border border-gray-200">
-        <div class="bg-[#006141] p-8 text-white text-center">
-            <h1 class="text-2xl font-extrabold mb-2 tracking-tight">3/1(일) SK핀크스 라운드 신청</h1>
-            <p class="text-emerald-100 text-sm font-medium">마감: 2/10(금)까지 (선착순)</p>
+    <div class="max-w-lg mx-auto bg-white shadow-2xl rounded-2xl overflow-hidden border border-gray-200">
+        <div class="bg-[#006141] p-5 text-white text-center">
+            <h1 class="text-xl font-extrabold mb-1 tracking-tight">3/1(일) SK핀크스 라운드 신청</h1>
+            <p class="text-emerald-100 text-xs font-medium">마감: 2/10(금)까지 (선착순)</p>
         </div>
 
-        <form id="golfForm" class="p-8 space-y-5">
+        <form id="golfForm" class="p-5 space-y-3.5">
             <div>
                 <label class="block text-sm font-bold text-gray-700 mb-1">회사 <span class="text-red-500">*</span></label>
-                <input type="text" name="company" required class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none transition" placeholder="회사명을 입력하세요">
+                <input type="text" name="company" required class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none transition text-sm" placeholder="회사명을 입력하세요">
             </div>
 
             <div>
                 <label class="block text-sm font-bold text-gray-700 mb-1">성명 <span class="text-red-500">*</span></label>
-                <input type="text" name="name" required placeholder="홍길동" class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none">
+                <input type="text" name="name" required placeholder="홍길동" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm">
             </div>
 
             <div>
                 <label class="block text-sm font-bold text-gray-700 mb-1">연락처 <span class="text-red-500">*</span></label>
-                <input type="tel" name="phone" required placeholder="010-0000-0000" class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none">
+                <input type="tel" name="phone" required placeholder="010-0000-0000" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm">
             </div>
 
             <div>
                 <label class="block text-sm font-bold text-gray-700 mb-1">이메일 <span class="text-red-500">*</span></label>
-                <input type="email" name="email" required placeholder="example@email.com" class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none">
+                <input type="email" name="email" required placeholder="example@email.com" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm">
             </div>
 
-            <div class="grid grid-cols-2 gap-4 pt-2">
+            <div class="grid grid-cols-2 gap-3 pt-1">
                 <div>
-                    <label class="block text-sm font-bold text-gray-700 mb-2">클럽 지참 <span class="text-red-500">*</span></label>
-                    <div class="flex space-x-5">
-                        <label class="flex items-center text-sm cursor-pointer"><input type="radio" name="club" value="예" checked class="w-4 h-4 text-emerald-600 mr-2"> 예</label>
-                        <label class="flex items-center text-sm cursor-pointer"><input type="radio" name="club" value="아니오" class="w-4 h-4 text-emerald-600 mr-2"> 아니오</label>
+                    <label class="block text-sm font-bold text-gray-700 mb-1.5">클럽 지참 <span class="text-red-500">*</span></label>
+                    <div class="flex space-x-4">
+                        <label class="flex items-center text-sm cursor-pointer"><input type="radio" name="club" value="예" checked class="w-4 h-4 text-emerald-600 mr-1.5"> 예</label>
+                        <label class="flex items-center text-sm cursor-pointer"><input type="radio" name="club" value="아니오" class="w-4 h-4 text-emerald-600 mr-1.5"> 아니오</label>
                     </div>
                 </div>
                 <div>
                     <label class="block text-sm font-bold text-gray-700 mb-1">동반자 인원 <span class="text-red-500">*</span></label>
-                    <select name="companion" required class="w-full px-4 py-2.5 border border-gray-300 rounded-xl outline-none bg-white focus:ring-2 focus:ring-emerald-500">
+                    <select name="companion" required class="w-full px-3 py-2 border border-gray-300 rounded-lg outline-none bg-white focus:ring-2 focus:ring-emerald-500 text-sm">
                         <option value="0">0명 (본인 단독)</option>
                         <option value="1">1명</option>
                         <option value="2">2명</option>
@@ -54,16 +54,16 @@
             </div>
 
             <div>
-                <label class="block text-sm font-bold text-gray-700 mb-1">핸디캡 <span class="text-gray-400 font-normal">(선택)</span></label>
-                <input type="number" name="handicap" placeholder="평균 타수 (예: 85)" class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none">
+                <label class="block text-sm font-bold text-gray-700 mb-1">핸디캡 <span class="text-gray-400 font-normal text-xs">(선택)</span></label>
+                <input type="number" name="handicap" placeholder="평균 타수 (예: 85)" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm">
             </div>
 
             <div>
-                <label class="block text-sm font-bold text-gray-700 mb-1">비고 <span class="text-gray-400 font-normal">(선택)</span></label>
-                <textarea name="note" rows="2" placeholder="기타 요청사항" class="w-full px-4 py-2.5 border border-gray-300 rounded-xl focus:ring-2 focus:ring-emerald-500 outline-none"></textarea>
+                <label class="block text-sm font-bold text-gray-700 mb-1">비고 <span class="text-gray-400 font-normal text-xs">(선택)</span></label>
+                <textarea name="note" rows="2" placeholder="기타 요청사항" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-emerald-500 outline-none text-sm resize-none"></textarea>
             </div>
 
-            <button type="submit" id="submitBtn" class="w-full bg-[#006141] hover:bg-[#004d34] text-white font-bold py-4 rounded-2xl shadow-lg transition-all active:scale-[0.98] mt-4">
+            <button type="submit" id="submitBtn" class="w-full bg-[#006141] hover:bg-[#004d34] text-white font-bold py-3 rounded-xl shadow-lg transition-all active:scale-[0.98] mt-3">
                 라운드 신청 완료하기
             </button>
         </form>
